--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -308,6 +308,7 @@ en:
     index:
       new_practice_event: "New event"
       create_practice_tip: "Create a new event on the calendar by clicking on the 'New event' button."
+      my_calendar: "My calendar"
     paid_account_notice: "You require a paid subscription to access the calendar functionality. %{upgrade_link}"
     create_notice: "The event was created successfully."
   practice_part:
