--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -336,6 +336,7 @@ pt:
     create_notice: "O evento foi criado com sucesso."
     index:
       create_practice_tip: "Crie um novo evento no calendário fazendo click no botão 'Novo Evento'"
+      my_calendar: "Meu calendário"
       new_practice_event: "Novo evento"
     paid_account_notice: "Você precisa de um plano pago para acessar a funcionalidade de calendário. %{upgrade_link}"
   practice_part:
