--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -495,6 +495,9 @@ pt:
     subscription_expired:
       body: "Seu plano de %{root_url} expirou. Você precisa se logar para reativar sua conta."
       hello: "Oi %{email}!"
+    subscription_expiring:
+      body: "Sua assinatura %{root_url} está perto a expirar! Entrar para renová-la."
+      hello: "Oi %{email}!"
   subscriptions:
     credit_card:
       add_title: "Adicionar um cartão"
