--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -400,7 +400,7 @@ pt:
       owner: "por %{owner}"
       shared_practice_deleted: "Atenção! Esta prática tem sido deletada pelo dono e pode ser definitivamente eliminada a qualquer momento. Se você quer preservá-la você pode duplicar."
     show:
-      add_angas_tip: "Separe a sua prática em partes, você pode criar angas clicando em 'Adicionar anga'."
+      add_angas_tip: "Separe a sua prática em partes, você pode criar angas clicando em '+'."
       add_associated_techniques_tip: "Sabia que você pode associar técnicas? Arraste e solte um mudrá a um ásana."
       add_techniques_tip: "Arraste e solte os ásanas para ordená-los."
       loading: Carregando...
@@ -496,7 +496,7 @@ pt:
       body: "Seu plano de %{root_url} expirou. Você precisa se logar para reativar sua conta."
       hello: "Oi %{email}!"
     subscription_expiring:
-      body: "Sua assinatura %{root_url} está perto a expirar! Entrar para renová-la."
+      body: "Sua assinatura %{root_url} está perto a expirar! Entra para renová-la."
       hello: "Oi %{email}!"
   subscriptions:
     credit_card:
