--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -328,7 +328,7 @@ es:
       name: "El nombre que deseás darle a tu práctica."
       sound_filename: "Elegí un sonido para indicar el cambio de técnicas."
       total_time: "Tiempo total de la práctica, considerando la espera entre técnicas."
-    time_format: "%{minutes} minutos %{seconds} segundos"
+    time_format: "%{hours}h %{minutes}m %{seconds}s"
   practice_event:
     help:
       practice: "Elegí la práctica."
